# gargoyle

./: .env.example  .gitignore  pyproject.toml
gargoyle/: graph_test.py  main.py  settings.py
gargoyle/controller/: mind_map_controller.py  model.py
gargoyle/edges/: fan_out_keywords_extraction.py  fan_out_keywords_merging.py  route_keywords_extraction.py  routing_after_keywords_extraction.py
gargoyle/graph/: mind_map_config.py  mind_map_context.py  mind_map_graph_builder.py  node_identifiers.py
gargoyle/llm/: llm_factory.py
gargoyle/nodes/: enforcing_utils.py  input_text_splitter.py  keywords_extractor.py  keywords_hierarchy_builder.py  keywords_single_step_builder.py  merge_keyword_hierarchies.py  mind_map_builder.py  prepare_keywords_before_merging.py  promt_templates.py  utils.py
gargoyle/services/: mind_map_generator.py
gargoyle/state/: aggregated_keywords_state.py  keywords_state.py
